tests/cases/positive/import-header.frtl
import math
it = 1.0
