tests/cases/negative/unknown-constructor.frtl
x : Floats = 1.0
it = x